[package]
name = "pnacl-build-helper"
version = "1.4.11"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
description = "Build script helper for building PNaCl/NaCl C/CXX libraries from source"
license = "MPL-2.0"
repository = "https://github.com/DiamondLovesYou/cargo-pnacl-helper"

[lib]
name = "pnacl_build_helper"
path = "src/lib.rs"

[dependencies]
tempdir = "0.3.5"
walkdir = "1"
